Fix overflow-x on search-bar

--- a/web/apps/gallery/static/scss/style.scss
+++ b/web/apps/gallery/static/scss/style.scss
@@ -134,7 +134,8 @@ h3 {
         border: 1px solid $aside-border-color;
         border-top: 0px;
         max-height: 200px;
-        overflow: scroll;
+        overflow-y: scroll;
+        overflow-x: hidden;
 
         h2 {
             margin: 0px;
